<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemindUs</string>
    <string name="titre_home">Accueil</string>
    <string name="titre_RDV">RDV </string>
    <string name="titre_creer_RDV">Créer un RDV</string>
    <string name="titre_calendrier">Calendrier</string>
    <string name="titre_msg_prog">Messages Programmés</string>
    <string name="titre_groupe">Groupe</string>
    <string name="titre_liste_groupe">Liste des groupes</string>
    <string name="titre_modifier_groupe">Modifier le groupe</string>
    <string name="titre_contact">Contact</string>
    <string name="titre_model_msg">Modèles messages</string>
    <string name="titre_model_msg_creer"> Créer un modèle message</string>
    <string name="titre_model_msg_modifier">Modifier ce modèle</string>
    <string name="titre_parametre">Paramètres</string>
    <string name="titre_langues">Langues</string>
    <string name="titre_aide">Aide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_parametres">Paramètre</string>
    <string name="action_aide">Aide</string>
    <string name="action_settings">Paramètre</string>
    <string name="action_home">Accueil</string>
    <string name="hello_world">Hello World</string>
    <string name="titre_copyright">Copyright</string>
    <string name="titre_accueil">Accueil</string>
    <string name="titre_notifications">Notifications</string>
    <string name="silencieux">Silencieux</string>
    <string name="vibreur">Vibreur</string>
    <string name="normal">Normal</string>
    <string name="titre_mail">Contactez-Nous</string>
    <string name="refresh_contact">Actualiser</string>

    <!-- JOURS DE LA SEMAINE -->
    <string name="monday">LUN</string>
    <string name="tuesday">MAR</string>
    <string name="wednesday">MER</string>
    <string name="thursday">JEU</string>
    <string name="friday">VEN</string>
    <string name="saturday">SAM</string>
    <string name="sunday">DIM</string>

    <!-- MESSAGES ERREURS -->
    <string name="erreur_telephone_contact">Le numéro de téléphone doit contenir au moins 8 chiffres</string>
    <string name="erreur_insertion_rdv">Une erreur s\'est produite lors de l\'insertion du RDV</string>
    <string name="erreur_insertion_msg_prog">Une erreur s\'est produite lors de l\'insertion du message programmé</string>
    <string name="erreur_modifiction_groupe">Une erreur s\'est produite lors de la modification de ce groupe</string>
    <string name="erreur_modifiction_rdv">Une erreur s\'est produite lors de la modification de ce RDV</string>
    <string name="erreur_modifiction_model_msg">Une erreur s\'est produite lors de la modification de ce modèle</string>
    <string name="erreur_format">Le format doit être: %s !</string>

    <!-- BOUTONS AJOUTER -->
    <string name="ajouter_groupe">Ajouter un nouveau groupe</string>
    <string name="ajouter_rdv">Ajouter un nouveau RDV</string>
    <string name="ajouter_model_msg">Ajouter un nouveau modèle de message</string>
    <string name="ajouter_msg_prog">Ajouter un nouveau message programmé</string>
    <string name="ajouter_contact">Ajouter des contacts</string>

    <!-- BOUTONS MODIFIER -->
    <string name="modifier_groupe">Modifier ce groupe</string>
    <string name="modifier_rdv">Modifier ce RDV</string>


    <!-- RESULTAT APRES APPUIE SUR UN BOUTON -->
    <string name="groupe_supprime">%s a bien été supprimé</string>
    <string name="groupe_modifie">%s a bien été modifié</string>
    <string name="rdv_supprime">%s a bien été supprimé</string>
    <string name="rdv_modifie">%s a bien été modifié</string>
    <string name="model_msg_supprime">%s a bien été supprimé</string>
    <string name="model_msg_modifie">%s a bien été modifié</string>


    <!-- DIALOGUE -->
    <string name="dialogue_supprimer">Supprimer</string>
    <string name="dialogue_modifier">Modifier</string>
    <string name="dialogue_contacts">Contacts</string>
    <string name="dialogue_manuellement">Envoyer manuellement</string>

    <!-- CHAMPS VIDES -->x
    <string name="groupe_nom_vide">Le champs nom est vide. Veuillez le remplir !</string>
    <string name="champs_vide">Le champs %s est vide. Veuillez le remplir !</string>

    <!-- BOUTONS GENERAL -->
    <string name="suivant">Suivant</string>
    <string name="anglais">Anglais</string>
    <string name="français">Français</string>
    <string name="arabe">Arabe</string>
    <string name="hebreu">Hébreu</string>
    <string name="mail_sujet">Sujet</string>
    <string name="mail_message">Message</string>
    <string name="mail_envoyer">Envoyer</string>
    <string name="notification">Choisir mode de notification</string>
    <string name="titre">Titre</string>
    <string name="date">Date</string>
    <string name="heureDebut">Heure du début</string>
    <string name="heureFin">Heure de fin</string>
    <string name="lieu">Lieu</string>
    <string name="modeTel">Mode du téléphone pendant le RDV ?</string>
    <string name="valider">Valider</string>

</resources>
