<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fond">


    <RelativeLayout
        android:id="@+id/headerMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#FC9"
        android:gravity="center">

        <include
            android:id="@+id/header"
            layout="@layout/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/headerMenu">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:weightSum="1">


            <EditText
                android:id="@+id/titre_model_msg"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:hint="@string/titre"
                android:inputType="text"
                android:layout_gravity="center"
                android:layout_marginTop="20dp" />


            <EditText
                android:id="@+id/message_model_msg"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:hint="@string/mail_message"
                android:inputType="textMultiLine"
                android:layout_gravity="center"
                android:layout_marginTop="20dp" />

            <Button
                android:id="@+id/valider"
                android:layout_width="114dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="0.08"
                android:onClick="ajouterModelMsg"
                android:text="@string/valider"
                android:layout_marginTop="20dp"
                android:background="@color/bleu_theme"
                android:textColor="#ffffffff" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>