<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fond">


    <RelativeLayout
        android:id="@+id/headerMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#FC9"
        android:gravity="center">

        <include
            android:id="@+id/header"
            layout="@layout/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/headerMenu">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/titre_msg_prog"
                android:layout_width="330dp"
                android:layout_height="fill_parent"
                android:hint="@string/titre"

                android:inputType="text"
                android:layout_gravity="center"
                android:layout_marginTop="40dp" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/layoutDate"
                android:layout_width="330dp"
                android:layout_height="fill_parent"
                tools:context=".MainActivity"

                android:layout_gravity="center"
                android:layout_marginTop="40dp">

                <EditText
                    android:id="@+id/editDate"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:editable="true"
                    android:inputType="date"
                    android:hint="@string/date"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/date"></EditText>

                <ImageButton
                    android:id="@+id/date"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:cropToPadding="true"
                    android:onClick="ajouterDate"
                    android:background="@drawable/calendar"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />


            </RelativeLayout>


            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/layoutHeure"
                android:layout_width="330dp"
                android:layout_height="fill_parent"
                tools:context=".MainActivity"
                android:layout_gravity="center"
                android:layout_marginTop="40dp">

                <EditText
                    android:id="@+id/editHeure"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:editable="true"
                    android:hint="@string/heureDebut"
                    android:inputType="datetime"
                    android:layout_toStartOf="@+id/heure" />

                <ImageButton
                    android:id="@+id/heure"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:cropToPadding="true"
                    android:onClick="ajouterHeure"
                    android:background="@drawable/clock"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>



   <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="330dp"
                android:layout_height="fill_parent"
       android:layout_gravity="center"
       android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/message_msg_prog"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:hint="@string/mail_message"
                android:inputType="textMultiLine"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_toStartOf="@+id/imageButton" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imageButton"
                android:layout_alignParentEnd="true"
                android:background="@drawable/add"
                android:onClick="redirectionMsgModele"
                android:layout_alignParentBottom="true" />

    </RelativeLayout>

            <Button
                android:id="@+id/valider"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.08"
                android:onClick="creerMsgProg"
                android:text="@string/suivant"
                android:layout_marginTop="20dp"
                android:background="@color/bleu_theme"
                android:textColor="#ffffffff" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>